Documentacion del proyecto y actualizacion del README